--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     "vite": "https://esm.sh/vite@^7.2.7",
     "drizzle-kit": "https://esm.sh/drizzle-kit@^0.31.8",
     "next/": "https://esm.sh/next@^16.0.10/",
-    "next": "https://esm.sh/next@^16.0.10"
+    "next": "https://esm.sh/next@^16.0.10",
+    "@next/env": "https://esm.sh/@next/env@^16.0.10"
   }
 }
 </script>
